Some updates for starring